--- a/DSA_Practice_Questions.ipynb
+++ b/DSA_Practice_Questions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9zGvPPgaiRD3WxtGxIWs8",
+      "authorship_tag": "ABX9TyPIynjgiGCH/oOgNepccQ7R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,30 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Prajktayadav/Array.py/blob/main/DSA_Practice_Questions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Name : Prajkta Omkar Yadav\n",
+        "# Cource : Data Science Pro\n",
+        "# Submission Date : 21th june 2024\n",
+        "# Email : gaikwadpraju02002@gmail.com\n",
+        "# GitHub Link :  DSA_Practice_Questions.ipynb"
+      ],
+      "metadata": {
+        "id": "lnAetnzS672M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EmM0JK1n67yj"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
